v7.5

  * add modeless judgment forms

v7.4

  * added default-relation-clause-combine and relation-clause-combine

  * bug fixes and documentation improvements

v7.3

  * added compatible-closure-context

v7.2

  * misc minor bug fixes

v7.2

  * added derivation->pict

  * brought the letrec model up to date with modern Racket

  * misc minor bug fixes and documentation improvements

v7.1

  * added make-immutable-binding-hash and make-binding-hash

  * various bug fixes

v7.0

  * various bug fixes

v6.12

  * typeset prime characters better, e.g. when writing e_′,
    don't use the subscript style for the ′ character

  * various bug fixes

v6.11

  * various bug fixes

  * added #:codomain clause to `reduction-relation`

v6.10

  * added a two argument version of `alpha-equivalent?`

  * added `sc-linebreaks`

  * use the atomic rewriters when rendering a 
    metafunction's name in its type signature

  * added judgment-form-show-rule-names

  * improved the binding-forms documentation

  * misc bug fixes

v6.9

  * add mf-apply

  * improve define-relation's cooperation with judgment-holds and
    related constructs

  * various bug fixes

v6.8

  * improved the ambiguity checker

  * minor bug fixes

v6.7

  * performance improvements

  * minor bug fixes

v6.6

  * added test-judgment-holds

  * bug fixes and performance improvements

v6.5

  * bug fixes

v6.4

  * add support for variable binding declarations in define-language
    and have pattern match now preserve alpha equivalence, based on
    those declarations.

    This improvement is based on the ideas in Paul Stansifer's
    dissertation and is implemented by Paul Stansifer.

  * changed shortcuts in --> so that non-terminals are no
    longer allowed for the names in the shortcut "parameters"

    These shortcut names were never constrained to actually be
    non-terminals, so this change is intended entirely to be
    able to give a helpful error message in an attempt to avoid
    confusion
